--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,29 @@
   <version>1.0-SNAPSHOT</version>
   <name>MoTeCH Mobile</name>
   <url>https://motech.rcg.usm.maine.edu/redmine</url>
-  <modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <modules>
       <!--<module>motech-mobile-commons</module>-->
       <module>motech-mobile-omp</module>
       <!--<module>motech-mobile-omi</module>
@@ -15,4 +37,10 @@
       <module>motech-mobile-core</module>
       <module>motech-mobile-webapp</module>
   </modules>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
+
+
+
