Added OMI module

--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,10 @@
         </plugins>
     </build>
     <modules>
-      <!--<module>motech-mobile-commons</module>-->
-      <module>motech-mobile-omp</module>
-      <!--<module>motech-mobile-omi</module>
-      <module>motech-mobile-imp</module>-->
       <module>motech-mobile-core</module>
+      <!--<module>motech-mobile-imp</module>-->
+      <module>motech-mobile-omi</module>
+      <module>motech-mobile-omp</module>
       <module>motech-mobile-webapp</module>
   </modules>
     <properties>
