--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -59,6 +59,11 @@
         <version>2.5</version>
     </dependency>
     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate</artifactId>
         <version>3.2.5.ga</version>
