--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -58,6 +58,12 @@
       <type>jar</type>
     </dependency>
     <dependency>
+      <groupId>com.dreamoval.motech</groupId>
+      <artifactId>motech-mobile-omi</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
       <groupId>javax.xml</groupId>
       <artifactId>webservices-api</artifactId>
       <version>2.0-SNAPSHOT</version>
