Added OMI webservice for Patient and CHPS Messages

--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/motech-webapp-config.xml</param-value>
+        <param-value>/WEB-INF/webapp-config.xml</param-value>
     </context-param>
 
     <listener>
