--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -69,8 +69,9 @@
         </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
-            <artifactId>derbyclient</artifactId>
+            <artifactId>derby</artifactId>
             <version>10.2.2.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
