--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -70,8 +70,8 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.2.2.0</version>
-            <scope>test</scope>
+            <version>10.5.2.0</version>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>junit</groupId>
