--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=INFO,logfile
+log4j.rootLogger=DEBUG,logfile
 
 # in case any output is given to stdout, format it
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -11,21 +11,16 @@ log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 log4j.appender.logfile.File=${catalina.base}/logs/motech-mobile.log
 log4j.appender.logfile.MaxFileSize=512KB
+
 # Keep three backup files.
 log4j.appender.logfile.MaxBackupIndex=3
+
 # Pattern to output: date priority [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
-
-#log4j.category.org.springframework.beans.propertyeditors.CustomDateEditor=DEBUG
 
 log4j.debug=true
 
 log4j.category.org.acegisecurity=DEBUG
 log4j.category.org.springframework=DEBUG
 log4j.category.org.hibernate=DEBUG
-
-# showing sql
-#log4j.category.org.hibernate.hql.ast.QueryTransla torImpl=DEBUG
-#log4j.category.org.hibernate.SQL=DEBUG
-#log4j.category.org.hibernate.loader.hql.QueryLoad er=DEBUG
