Ready for Testing: Added the MotechIDGenerator for ID generation Changed jaxws-rt varsion from 2.1.5 to 2.1.4 Changed javax.faces version from 1.2_04-p01 to 1.2_04-p02

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,20 @@
     <version>1.0-SNAPSHOT</version>
     <name>MoTeCH Mobile</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
+    <repositories>
+        <repository>
+            <url>http://repository.jboss.org/maven2</url>
+            <id>jboss-repo</id>
+            <layout>default</layout>
+            <name>JBoss Repository</name>
+        </repository>
+        <repository>
+            <url>http://download.java.net/maven/2/</url>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven 2</name>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
