--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -145,6 +145,11 @@
             <artifactId>cglib-nodep</artifactId>
             <version>2.1_3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
