--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -67,7 +67,6 @@
             <url>http://motech.rcg.usm.maine.edu/archiva/repository/all</url>
         </repository>
     </repositories>
-
     <pluginRepositories>
         <pluginRepository>
             <id>motech-repo</id>
@@ -501,12 +500,13 @@
             </distributionManagement>
         </profile>
     </profiles>
-    <scm>
-        <url>https://motech.rcg.usm.maine.edu/redmine/repositories/show/motech-mobile</url>
-        <connection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/trunk</connection>
-        <developerConnection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/trunk</developerConnection>
-    </scm>
-
+    <distributionManagement>
+        <snapshotRepository>
+            <id>repo</id>
+            <name>MoTeCH Repository</name>
+            <url>scp://motech.rcg.usm.maine.edu/svn/motech-mobile/trunk</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
 
 
