Incorporated recommended changes to project structure and applied patch received from Maine team. Updated test cases in WebApp and OMP to use EasyMock mock objects.

--- a/motech-mobile-omp/pom.xml
+++ b/motech-mobile-omp/pom.xml
@@ -96,6 +96,10 @@
           <groupId>log4j</groupId>
           <artifactId>log4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
