[maven-release-manager] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.dreamoval</groupId>
     <artifactId>motech-mobile</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>MoTeCH Mobile</name>
     <url>https://motech.rcg.usm.maine.edu/redmine/projects/show/motech-mobile</url>
 
@@ -199,19 +199,19 @@
             <dependency>
                 <groupId>com.dreamoval.motech</groupId>
                 <artifactId>motech-mobile-core</artifactId>
-                <version>1.0</version>
+                <version>1.1-SNAPSHOT</version>
                 <type>jar</type>
             </dependency>
             <dependency>
                 <groupId>com.dreamoval.motech</groupId>
                 <artifactId>motech-mobile-omp</artifactId>
-                <version>1.0</version>
+                <version>1.1-SNAPSHOT</version>
                 <type>jar</type>
             </dependency>
             <dependency>
                 <groupId>com.dreamoval.motech</groupId>
                 <artifactId>motech-mobile-omi</artifactId>
-                <version>1.0</version>
+                <version>1.1-SNAPSHOT</version>
                 <type>jar</type>
             </dependency>
             <dependency>
@@ -469,9 +469,9 @@
         </profile>
     </profiles>
     <scm>
-        <url>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/tags/1.0</url>
-        <connection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/tags/1.0</connection>
-        <developerConnection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/tags/1.0</developerConnection>
+        <url>https://motech.rcg.usm.maine.edu/redmine/repositories/show/motech-mobile</url>
+        <connection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/trunk</connection>
+        <developerConnection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/trunk</developerConnection>
     </scm>
 
 </project>
