--- a/motech-mobile-omi/pom.xml
+++ b/motech-mobile-omi/pom.xml
@@ -3,13 +3,13 @@
     <groupId>com.dreamoval.motech</groupId>
     <artifactId>motech-mobile-omi</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-M1</version>
+    <version>1.0-M2-SNAPSHOT</version>
     <name>MoTeCH Mobile OMI</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
     <parent>
         <groupId>com.dreamoval</groupId>
         <artifactId>motech-mobile</artifactId>
-        <version>1.0-M1</version>
+        <version>1.0-M2-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.dreamoval.motech</groupId>
             <artifactId>motech-mobile-omp</artifactId>
-            <version>1.0-M1</version>
+            <version>1.0-M2-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
