Added interface and classes for status handling. Updated core POJOs. Updated OMI and WebApp to reflect changes to core.

--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dreamoval</groupId>
@@ -72,7 +73,6 @@
             <name>Motech Maven Repository</name>
             <url>http://motech.rcg.usm.maine.edu/archiva/repository/all</url>
             <snapshots>
-                <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
@@ -112,9 +112,11 @@
     <modules>
         <module>motech-mobile-core</module>
       <!--<module>motech-mobile-imp</module>-->
-        <module>motech-mobile-omi</module>
         <module>motech-mobile-omp</module>
+        <module>motech-mobile-omi</module>
         <module>motech-mobile-webapp</module>
+        <!--<module>motech-mobile-wsclient</module>-->
+        
     </modules>
     <dependencyManagement>
         <dependencies>
