Added to MessageRequest MessageType and  Status enum.Added DAO's and it's implementation for GatewayRequestDetails added new entry in the spring configuration file.edited the coreManager to be able to create GatewayRequestDetails and GatewayRequestDetailsDAO objects

--- a/motech-mobile-omp/src/main/resources/clickatell.properties
+++ b/motech-mobile-omp/src/main/resources/clickatell.properties
@@ -1,6 +1,6 @@
-apiId=3107994
-user=iwalletMobile
-password=1dr3wa113t
-sender=iwm
-deliveryAcknowledge=1
-callback=2
+clickatell.gateway.apiId=3107994
+clickatell.gateway.user=iwalletMobile
+clickatell.gateway.password=1dr3wa113t
+clickatell.gateway.sender=iwm
+clickatell.gateway.deliveryAcknowledge=1
+clickatell.gateway.callback=2
