Modified GatewayResponse, changed messageStatus type to MStatus, added responseText field. Updated OMP and OMI to work with changes.

--- a/motech-mobile-omi/pom.xml
+++ b/motech-mobile-omi/pom.xml
@@ -23,6 +23,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>org.motech</groupId>
+            <artifactId>motech-wsclient</artifactId>
+            <version>1.0-M2-SNAPSHOT</version>            
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
