Feature #102 - Solved issues with message request processing Feature #95 - Solved issues with fetching prepared gateway requests. Messages can be sent successfully.

--- a/motech-mobile-core/src/main/resources/jdbc.properties
+++ b/motech-mobile-core/src/main/resources/jdbc.properties
@@ -1,7 +1,12 @@
 # Contains configuration for jdbc connection
+#Derby
+#jdbc.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
+#jdbc.username=root
+#jdbc.password=admin
+#jdbc.url=jdbc:derby:motechmobiledb;create=true
 
-jdbc.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-jdbc.username=root
-jdbc.password=admin
-jdbc.url=jdbc:derby:motechmobiledb;create=true
-
+#HSQLDB
+jdbc.driverClassName=org.hsqldb.jdbcDriver
+jdbc.username=sa
+jdbc.password=
+jdbc.url=jdbc:hsqldb:mem:motechmobiledb
