--- a/motech-mobile-core/src/main/resources/hibernate.properties
+++ b/motech-mobile-core/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 # This properties file oulines the configuration
 # of Hibernate.
 
-hibernate.dialect=org.hibernate.dialect.DerbyDialect
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
