--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -6,7 +6,7 @@ log4j.rootLogger=INFO, stdout, logfile
 # in case any output is given to stdout, format it
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 log4j.appender.logfile.File=${motech-root}/WEB-INF/logs/motech-mobile.log
@@ -17,7 +17,7 @@ log4j.appender.logfile.MaxBackupIndex=3
 
 # Pattern to output: date priority [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.logfile.layout.ConversionPattern=%d %p %t [%c] - %m%n
 
 log4j.debug=true
 
