Fixed updating of status problem. Removed update=false on GatewayRequest and MessageRequest mapping files

--- a/pom.xml
+++ b/pom.xml
@@ -434,6 +434,11 @@
                 <artifactId>commons-collections</artifactId>
                 <version>3.2</version>
             </dependency>
+            <dependency>
+                <groupId>hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>1.8.0.10</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
