--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -78,6 +78,11 @@
           <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>org.motechproject</groupId>
+            <artifactId>motech-wsapi</artifactId>
+            <version>1.0-M2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
           <groupId>org.apache.cxf</groupId>
           <artifactId>cxf-rt-core</artifactId>
         </dependency>
