Changed hsql protocol from mem to file to enable browsing of DB

--- a/motech-mobile-core/src/main/resources/hsql.jdbc.properties
+++ b/motech-mobile-core/src/main/resources/hsql.jdbc.properties
@@ -9,4 +9,4 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.username=sa
 jdbc.password=
-jdbc.url=jdbc:hsqldb:mem:motechmobiledb
+jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
