Moved MySQL dependency to parent POM and add file limit to log4j

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -14,5 +14,6 @@ log4j.appender.logfile.File=${catalina.home}/logs/motech-mobile.log
 # Pattern to output: date priority [thread] [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
+log4j.appender.logfile.MaxFileSize=10000KB
 
 log4j.debug=true
