Added lastmodified field to MessageRequest,GatewayResponse, GatewayRequest and added few methods getByStatus, getByRequestIdAndTryNumber, getByStatusAndSchedule respectively to those classes

--- a/motech-mobile-core/src/main/resources/mysql.jdbc.properties
+++ b/motech-mobile-core/src/main/resources/mysql.jdbc.properties
@@ -1,7 +1,7 @@
 # Contains configuration for jdbc connection
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.username=motechmobile
-jdbc.password=mmobilepass
+jdbc.username=root
+jdbc.password=
 jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
 
