Added "Gender" to ParameterType enumeration. Updated IMP tests to use separate configuration file. Updated Integration tests to use both client-config.xml and webapp-config.xml. Removed reference to core-config.xml from imp-config.xml Removed reference to omi-config.xml from client-config.xml

--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -72,6 +72,10 @@
           <artifactId>motech-mobile-omi</artifactId>
         </dependency>
         <dependency>
+          <groupId>com.dreamoval.motech</groupId>
+          <artifactId>motech-mobile-imp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.motechproject</groupId>
             <artifactId>motech-wsapi</artifactId>
         </dependency>
@@ -147,6 +151,19 @@
 
     <build>
         <finalName>motech-mobile-webapp</finalName>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+            <testResource>
+                <directory>src/main/webapp/WEB-INF</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*-config.xml</include>
+                </includes>
+            </testResource>
+        </testResources>
     </build>
 
     <profiles>
