--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,12 @@
                 <type>jar</type>
             </dependency>
             <dependency>
+                <groupId>com.dreamoval.motech</groupId>
+                <artifactId>motech-mobile-imp</artifactId>
+                <version>1.0-M3-SNAPSHOT</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
                 <groupId>org.motechproject</groupId>
                 <artifactId>motech-wsapi</artifactId>
                 <version>1.0-M3-SNAPSHOT</version>
